--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
+<!DOCTYPE html>
 <html>
-
-<body>
-  <h1>Aaron Heidinger</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
-
+   <h1>HTML Elements and Tags</h1> 
+   <h2>HTML Element</h2>
+   <table>
+    <thead>
+        <tr>
+            <th>Element</th>
+            <th>Name</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><span class="element">&lt;a&gt;</span></td>
+            <td>Anchor Element</td>
+            <td> used to create hyperlinks in an HTML document</td>
+        </tr>
+        <tr>
+            <td><span class="element">&lt;title&gt;</span></td>
+            <td>Title Element</td>
+            <td>contains a text that defines the title of an HTML document</td>
+        </tr>
+        <tr>
+            <td><span class="element">&lt;h1&gt; to &lt;h6&gt;</span></td>
+            <td>Headings</td>
+            <td>&lt;h1&gt; most important to &lt;h6&gt; least important</td>
+        </tr>
+        <tr>
+            <td><span class="element">&lt;p&gt;</span></td>
+            <td>Paragraph</td>
+            <td>defines paragraphs</td>
+        </tr>
+        <tr>
+            <td><span class="element">&lt;img&gt;</span></td>
+            <td>Image</td>
+            <td>defines HTML images; src, alt, width and height are attributes</td>
+        </tr>
+    </tbody>
+   </table>
 </html>
