--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <link ref="stylesheet" href="
+   </head>
    <h1>HTML Elements and Tags</h1> 
    <h2>HTML Element</h2>
    <table>
