--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link ref="stylesheet" href="styles.css">
+      <link ref="stylesheet" href="/styles.css">
    </head>
    <h1>HTML Elements and Tags</h1> 
    <h2>HTML Element</h2>
