--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <link ref="stylesheet" href="/styles.css">
    </head>
+   <body>
    <h1>HTML Elements and Tags</h1> 
    <h2>HTML Element</h2>
    <table>
@@ -39,6 +40,8 @@
             <td>Image</td>
             <td>defines HTML images; src, alt, width and height are attributes</td>
         </tr>
+       
     </tbody>
    </table>
+   </body>
 </html>
