--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
    <head>
       <link rel="stylesheet" href="/styles.css" type="text/css">
-      
+     
    </head>
    <body>
-    <h1>HTML Elements and Tags</h1> 
+    <div>
+    <h1 class="header">HTML Elements and Tags</h1>
+    }
+    </div> 
    <h2>HTML Element</h2>
    <table>
     <thead>
